docs/sources/v0.48.x/javascript-api/k6-experimental/browser/page/_index.md
---
title: "Page"
excerpt: "Browser module: Page Class"
weight: 10
---

# Page

Page provides methods to interact with a single tab in a running web browser. A single [BrowserContext](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/browsercontext) can have many `pages`.

| Method                                                                                                                                         | Description                                                                                                                                                                                                                                                                                                                                                                                                |
| ---------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [page.bringToFront()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/bringtofront)                                      | Activates a browser tab.                                                                                                                                                                                                                                                                                                                                                                                   |
| [page.check(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/check/)                                                         | Select the input checkbox.                                                                                                                                                                                                                                                                                                                                                                                 |
| [page.click(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/click/)                                                         | Clicks on an element matching a `selector`.                                                                                                                                                                                                                                                                                                                                                                |
| [page.close()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/close)                                                    | Closes a tab that the `page` is associated with.                                                                                                                                                                                                                                                                                                                                                           |
| [page.content()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/content)                                                | Gets the HTML contents of the page.                                                                                                                                                                                                                                                                                                                                                                        |
| [page.context()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/context)                                                | Gets the [BrowserContext](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/browsercontext) that the page belongs to.                                                                                                                                                                                                                                                                        |
| [page.dblclick(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/dblclick/)                                                   | With the [Mouse](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/mouse), double click on an element matching the provided `selector`.                                                                                                                                                                                                                                                      |
| [page.dispatchEvent(selector, type, eventInit[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/dispatchevent/)                        | Dispatches HTML DOM event types e.g. `'click'`                                                                                                                                                                                                                                                                                                                                                             |
| [page.$(selector)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/page-dollar)                                               | Finds an element matching the specified `selector` within the page.                                                                                                                                                                                                                                                                                                                                        |
| [page.$$(selector)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/page-doubledollar)                                             | Finds all elements matching the specified `selector` within the page.                                                                                                                                                                                                                                                                                                                                      |
| [page.emulateMedia([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/emulatemedia/)                                                     | Changes the CSS media type and the color scheme feature.                                                                                                                                                                                                                                                                                                                                                   |
| [page.emulateVisionDeficiency(type)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/emulatevisiondeficiency)            | Emulates your website with the specified vision deficiency `type`.                                                                                                                                                                                                                                                                                                                                         |
| [page.evaluate(pageFunction[, arg])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/evaluate/)                                                   | Returns the value of the `pageFunction` invocation.                                                                                                                                                                                                                                                                                                                                                        |
| [page.evaluateHandle(pageFunction[, arg])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/evaluatehandle/)                                             | Returns the value of the `pageFunction` invocation as a [JSHandle](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/jshandle).                                                                                                                                                                                                                                                             |
| [page.fill(selector, value[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/fill/)                                                    | Fill an `input`, `textarea` or `contenteditable` element with the provided value.                                                                                                                                                                                                                                                                                                                          |
| [page.focus(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/focus/)                                                         | Fetches an element with `selector` and focuses on it.                                                                                                                                                                                                                                                                                                                                                      |
| [page.frames()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/frames)                                                  | Returns an array of frames on the page.                                                                                                                                                                                                                                                                                                                                                                    |
| [page.getAttribute(selector, name[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/getattribute/)                                     | Returns the element attribute value for the given attribute name.                                                                                                                                                                                                                                                                                                                                          |
| [page.goto(url[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/goto/)                                                                | Navigates to the specified `url`.                                                                                                                                                                                                                                                                                                                                                                          |
| [page.hover(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/hover/)                                                         | Hovers over an element matching `selector`.                                                                                                                                                                                                                                                                                                                                                                |
| [page.innerHTML(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/innerhtml/)                                                 | Returns the `element.innerHTML`.                                                                                                                                                                                                                                                                                                                                                                           |
| [page.innerText(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/innertext/)                                                 | Returns the `element.innerText`.                                                                                                                                                                                                                                                                                                                                                                           |
| [page.inputValue(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/inputvalue/)                                               | Returns `input.value` for the selected `input`, `textarea` or `select` element.                                                                                                                                                                                                                                                                                                                            |
| [page.isChecked(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/ischecked/)                                                 | Checks to see if the `checkbox` `input` type is selected or not.                                                                                                                                                                                                                                                                                                                                           |
| [page.isClosed()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/isclosed) <BWIPT id="878"/>                            | Checks if the page has been closed.                                                                                                                                                                                                                                                                                                                                                                        |
| [page.isDisabled(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/isdisabled/)                                               | Checks if the element is `disabled`.                                                                                                                                                                                                                                                                                                                                                                       |
| [page.isEditable(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/iseditable/)                                               | Checks if the element is `editable`.                                                                                                                                                                                                                                                                                                                                                                       |
| [page.isEnabled(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/isenabled/)                                                 | Checks if the element is `enabled`.                                                                                                                                                                                                                                                                                                                                                                        |
| [page.isHidden(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/ishidden/)                                                   | Checks if the element is `hidden`.                                                                                                                                                                                                                                                                                                                                                                         |
| [page.isVisible(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/isvisible/)                                                 | Checks if the element is `visible`.                                                                                                                                                                                                                                                                                                                                                                        |
| [page.keyboard](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/keyboard)                                                | Returns the [Keyboard](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/keyboard) instance to interact with a virtual keyboard on the page.                                                                                                                                                                                                                                                 |
| [page.locator(selector)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/locator)                                        | Returns a [Locator](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/locator) for the given `selector`.                                                                                                                                                                                                                                                                                     |
| [page.mainFrame()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/mainframe)                                            | Returns the page's main [Frame](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/frame).                                                                                                                                                                                                                                                                                                    |
| [page.mouse](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/mouse)                                                      | Returns the [Mouse](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/mouse) instance to interact with a virtual mouse on the page.                                                                                                                                                                                                                                                          |
| [page.on(event, handler)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/on)                                            | Registers a handler to be called whenever the specified event occurs.                                                                                                                                                                                                                                                                                                                                      |
| [page.opener()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/opener)                                                  | Returns the `page` that opened the current `page`.                                                                                                                                                                                                                                                                                                                                                         |
| [page.press(selector, key[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/press/)                                                    | Focuses the element, and then presses the given `key` on the [Keyboard](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/keyboard).                                                                                                                                                                                                                                                         |
| [page.reload([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/reload/)                                                                 | Reloads the current page.                                                                                                                                                                                                                                                                                                                                                                                  |
| [page.screenshot([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/screenshot/)                                                         | Returns a buffer with the captured screenshot from the web browser.                                                                                                                                                                                                                                                                                                                                        |
| [page.selectOption(selector, values[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/selectoption/)                                   | Selects one or more options which match the values from a `<select>` element.                                                                                                                                                                                                                                                                                                                              |
| [page.setContent(html[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/setcontent/)                                                   | Sets the supplied HTML string to the current page.                                                                                                                                                                                                                                                                                                                                                         |
| [page.setDefaultNavigationTimeout(timeout)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/setdefaultnavigationtimeout) | Changes the navigation timeout for [page.goto(url[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/goto/), [page.reload([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/reload/), [page.setContent(html[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/setcontent/), and [page.waitForNavigation([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/waitfornavigation/) |
| [page.setDefaultTimeout(timeout)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/setdefaulttimeout)                     | Changes the timeout for all the methods accepting a `timeout` option.                                                                                                                                                                                                                                                                                                                                      |
| [page.setExtraHTTPHeaders(headers)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/setextrahttpheaders)                 | Sets extra HTTP headers which will be sent with subsequent HTTP requests.                                                                                                                                                                                                                                                                                                                                  |
| [page.setViewportSize(viewportSize)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/setviewportsize)                    | Updates the `page`'s width and height.                                                                                                                                                                                                                                                                                                                                                                     |
| [page.tap(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/tap/)                                                             | Taps the first element that matches the `selector`.                                                                                                                                                                                                                                                                                                                                                        |
| [page.textContent(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/textcontent/)                                             | Returns the `element.textContent`.                                                                                                                                                                                                                                                                                                                                                                         |
| [page.throttleCPU(cpuProfile)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/throttlecpu)                              | Throttles the CPU in Chrome/Chromium to slow it down by the specified `rate` in the `cpuProfile` object. |
| [page.throttleNetwork(networkProfile)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/throttlenetwork)                  | Throttles the network in Chrome/Chromium to slow it down by the specified fields in the `networkProfile` object. |
| [page.title()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/title)                                                    | Returns the `page`'s title.                                                                                                                                                                                                                                                                                                                                                                                |
| [page.type(selector, text[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/type/)                                                     | Types the `text` in the first element found that matches the `selector`.                                                                                                                                                                                                                                                                                                                                   |
| [page.touchScreen](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/touchscreen)                                          | Returns the [Touchscreen](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/touchscreen) instance to interact with a virtual touchscreen on the page.                                                                                                                                                                                                                                        |
| [page.uncheck(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/uncheck/)                                                     | Unselects an input `checkbox` element.                                                                                                                                                                                                                                                                                                                                                                     |
| [page.url()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/url)                                                        | Returns the `page`'s URL.                                                                                                                                                                                                                                                                                                                                                                                  |
| [page.viewportSize()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/viewportsize)                                      | Returns the `page`'s size (width and height).                                                                                                                                                                                                                                                                                                                                                              |
| [page.waitForFunction(pageFunction, arg[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/waitforfunction/)                            | Returns when the `pageFunction` returns a truthy value.                                                                                                                                                                                                                                                                                                                                                    |
| [page.waitForLoadState(state[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/waitforloadstate/) <BWIPT id="880"/>                    | Waits for the given load `state` to be reached.                                                                                                                                                                                                                                                                                                                                                            |
| [page.waitForNavigation([options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/waitfornavigation/)                                           | Waits for the given navigation lifecycle event to occur and returns the main resource response.                                                                                                                                                                                                                                                                                                            |
| [page.waitForSelector(selector[, options])](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/waitforselector/)                                     | Returns when element specified by selector satisfies `state` option.                                                                                                                                                                                                                                                                                                                                       |
| [page.waitForTimeout(timeout)](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/waitfortimeout)                           | Waits for the given `timeout` in milliseconds.                                                                                                                                                                                                                                                                                                                                                             |
| [page.workers()](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/page/workers)                                                | Returns an array of the dedicated [WebWorkers](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/browser/worker) associated with the page.                                                                                                                                                                                                                                                           |
